--- a/css/style.css
+++ b/css/style.css
@@ -14,4 +14,8 @@
 table > tbody > tr > td.vertical-middle {
     vertical-align: middle !important
 }
+
+.panel-heading-vertical-align {
+    line-height: 100%
+}
  
